EJ: use strapdown.js

--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Erfan Jap</title>
+    <meta name="description" content="">
+    <meta name="robots" content="noindex" />
 </head>
+
 <body>
-    <h1>About</h1>
+<!-- NOTE: edit content in IntelliJ or Code -->
+<textarea theme="readable" style="display:none;">
+
+# P E
+
+## I L (2008 - ...)
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+et dolore magna aliqua.
+
+## A I P L (... - ...)
+
+Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+culpa qui officia deserunt mollit anim id est laborum.
+
+</textarea>
+<script src="v/0.2/strapdown.js"></script>
 </body>
 </html>
