EJ: update header and erfanjap.md

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Erfan Jap</title>
-    <meta name="description" content="">
-    <meta name="robots" content="noindex" />
+    <meta name="description" content="Erfan Jap's Online Resume">
+    <meta name="robots" content="noindex"/>
 </head>
 
 <body>
