--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- NOTE: edit content in IntelliJ or Code -->
 <textarea theme="readable" style="display:none;">
 
-# P E
+# P E Test
 
 ## I L (2008 - ...)
 
