--- a/index.html
+++ b/index.html
@@ -12,72 +12,74 @@
 </head>
 
 <body>
-    <h1 id="erfan-jap">Erfan Jap</h1>
-    <ul>
-    <li>Software Developer</li>
-    <li>Sydney, New South Wales, Australia</li>
-    </ul>
-    <h2 id="about-me">About me</h2>
-    <ul>
-    <li><p>Currently building real-time payments services and API using AWS
-    serverless services (AWS Lambda, DynamoDB, API Gateway,
-    SQS, CloudFormation, Cognito) and Australia&#39;s NPP (New Payment
-    Platform).</p>
-    </li>
-    <li><p>Also building front end application to manage customer self-service
-    experience and our customer’s user payment experience. Built using
-    Vue.js with TypeScript and GraphQL powered by AWS AppSync.</p>
-    </li>
-    <li><p>Experience includes Cloud Native Java (Kotlin) Spring Boot
-    Application, Digital Notifications (Email, SMS, Mobile Push
-    Notification), Secure Personal Profile, Vehicle Health Check (VHC),
-    Electronic Parts Catalogue (EPC), Global Distribution System
-    (GDS) / Airline Reservations System, and Telephony.</p>
-    </li>
-    </ul>
-    <h2 id="work-experience">Work experience</h2>
-    <h3 id="-azupay-azupay-com-au-"><a href="azupay.com.au">Azupay</a></h3>
-    <p>Senior Engineer (October 2021 - Present)</p>
-    <ul>
-    <li>Building Azupay&#39;s PayTo product. PayTo is a new, digital way for merchants and businesses to initiate real-time payments (quoted from: https://
-    nppa.com.au/payto)</li>
-    </ul>
-    <h3 id="-service-nsw-"><a href="">Service NSW</a></h3>
-    <p>Principal Engineer (August 2020 - October 2021)</p>
-    <ul>
-    <li><p>Working on Service New South Wales&#39;s Digital Notifications portfolios.</p>
-    </li>
-    <li><p>Product development using Kotlin, Spring Boot, Spring Security, VMWare
-    Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
-    </li>
-    </ul>
-    <p>Senior Engineer (December 2018 - August 2020)</p>
-    <ul>
-    <li><p>Working on Service New South Wales&#39;s Personal Profile and Digital
-    Notifications portfolios.</p>
-    </li>
-    <li><p>Experience in Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
-    </li>
-    </ul>
-    <h3 id="-infomedia-ltd-"><a href="">Infomedia Ltd</a></h3>
-    <p>Software Developer (January 2008 - November 2018)</p>
-    <ul>
-    <li>Software developer of SaaS solutions for the automotive industry.</li>
-    </ul>
-    <h3 id="-abacus-international-"><a href="">Abacus International</a></h3>
-    <p>Software Developer (August 2002 - June 2005)</p>
-    <ul>
-    <li>GDS (Global Distribution Systems) software developer. Developing solutions for travel-related services and airline ticketing.</li>
-    </ul>
-    <h3 id="-innovax-systems-pte-ltd-"><a href="">Innovax Systems Pte Ltd</a></h3>
-    <p>Software Developer (March 1999 - May 2002)</p>
-    <ul>
-    <li>Contact Centre Solutions developer. Developing IVR (Interactive Voice
-    Response) solutions, PABX (Private Automatic Branch Exchange), VoIP, and
-    CRM (Customer Relationship Management).</li>
-    </ul>
-    <h2 id="education">Education</h2>
-    <h3 id="university-of-new-south-wales">University of New South Wales</h3>
-    <p>Master&#39;s degree, Computing and Information Technology (2005 - 2007)</p>    
+    <div class="container">
+        <h1 id="erfan-jap">Erfan Jap</h1>
+        <ul>
+        <li>Software Developer</li>
+        <li>Sydney, New South Wales, Australia</li>
+        </ul>
+        <h2 id="about-me">About me</h2>
+        <ul>
+        <li><p>Currently building real-time payments services and API using AWS
+        serverless services (AWS Lambda, DynamoDB, API Gateway,
+        SQS, CloudFormation, Cognito) and Australia&#39;s NPP (New Payment
+        Platform).</p>
+        </li>
+        <li><p>Also building front end application to manage customer self-service
+        experience and our customer’s user payment experience. Built using
+        Vue.js with TypeScript and GraphQL powered by AWS AppSync.</p>
+        </li>
+        <li><p>Experience includes Cloud Native Java (Kotlin) Spring Boot
+        Application, Digital Notifications (Email, SMS, Mobile Push
+        Notification), Secure Personal Profile, Vehicle Health Check (VHC),
+        Electronic Parts Catalogue (EPC), Global Distribution System
+        (GDS) / Airline Reservations System, and Telephony.</p>
+        </li>
+        </ul>
+        <h2 id="work-experience">Work experience</h2>
+        <h3 id="-azupay-azupay-com-au-"><a href="azupay.com.au">Azupay</a></h3>
+        <p>Senior Engineer (October 2021 - Present)</p>
+        <ul>
+        <li>Building Azupay&#39;s PayTo product. PayTo is a new, digital way for merchants and businesses to initiate real-time payments (quoted from: https://
+        nppa.com.au/payto)</li>
+        </ul>
+        <h3 id="-service-nsw-"><a href="">Service NSW</a></h3>
+        <p>Principal Engineer (August 2020 - October 2021)</p>
+        <ul>
+        <li><p>Working on Service New South Wales&#39;s Digital Notifications portfolios.</p>
+        </li>
+        <li><p>Product development using Kotlin, Spring Boot, Spring Security, VMWare
+        Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
+        </li>
+        </ul>
+        <p>Senior Engineer (December 2018 - August 2020)</p>
+        <ul>
+        <li><p>Working on Service New South Wales&#39;s Personal Profile and Digital
+        Notifications portfolios.</p>
+        </li>
+        <li><p>Experience in Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
+        </li>
+        </ul>
+        <h3 id="-infomedia-ltd-"><a href="">Infomedia Ltd</a></h3>
+        <p>Software Developer (January 2008 - November 2018)</p>
+        <ul>
+        <li>Software developer of SaaS solutions for the automotive industry.</li>
+        </ul>
+        <h3 id="-abacus-international-"><a href="">Abacus International</a></h3>
+        <p>Software Developer (August 2002 - June 2005)</p>
+        <ul>
+        <li>GDS (Global Distribution Systems) software developer. Developing solutions for travel-related services and airline ticketing.</li>
+        </ul>
+        <h3 id="-innovax-systems-pte-ltd-"><a href="">Innovax Systems Pte Ltd</a></h3>
+        <p>Software Developer (March 1999 - May 2002)</p>
+        <ul>
+        <li>Contact Centre Solutions developer. Developing IVR (Interactive Voice
+        Response) solutions, PABX (Private Automatic Branch Exchange), VoIP, and
+        CRM (Customer Relationship Management).</li>
+        </ul>
+        <h2 id="education">Education</h2>
+        <h3 id="university-of-new-south-wales">University of New South Wales</h3>
+        <p>Master&#39;s degree, Computing and Information Technology (2005 - 2007)</p>    
+    </div>    
 </body>
 </html>
