--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1 id="erfan-jap">Erfan Jap</h1>
-        <ul>
+<main>
+    <h1 id="erfan-jap">Erfan Jap</h1>
+    <ul>
         <li>Software Engineer</li>
         <li>Sydney, New South Wales, Australia</li>
-        </ul>
-        <h2 id="about-me">About me</h2>
-        <h3 id="current">Current</h3>
-        <ul>
+    </ul>
+    <h2 id="about-me">About me</h2>
+    <h3 id="current">Current</h3>
+    <ul>
         <li><p>In my current role, I am building payment solutions on New Payment Platform, which is Australia&#39;s national fast payments infrastructure.</p>
         </li>
         <li><p>The solutions include both API and web application.</p>
@@ -30,71 +30,71 @@
         <li><p>I received formal training at Pivotal Labs in Sydney in 2018.</p>
         </li>
         <li><p>The technology stacks that I am using daily includes:</p>
-        <ul>
-        <li>AWS API Gateway, Lambda, DynamoDB, SQS, and CloudWatch (aka. serverless)</li>
-        <li>AWS CloudFormation and CDK</li>
-        <li>AWS AppSync</li>
-        <li>VueJS</li>
-        <li>GitLab</li>
-        <li>JavaScript and NodeJS</li>
-        </ul>
+            <ul>
+                <li>AWS API Gateway, Lambda, DynamoDB, SQS, and CloudWatch (aka. serverless)</li>
+                <li>AWS CloudFormation and CDK</li>
+                <li>AWS AppSync</li>
+                <li>VueJS</li>
+                <li>GitLab</li>
+                <li>JavaScript and NodeJS</li>
+            </ul>
         </li>
-        </ul>
-        <h3 id="past">Past</h3>
-        <ul>
+    </ul>
+    <h3 id="past">Past</h3>
+    <ul>
         <li>I worked with the following technologies in the past: <ul>
-        <li>Cloud Native Java (Kotlin) Spring Boot Application</li>
-        <li>Digital Notifications (Email, SMS, Mobile Push Notification)</li>
-        <li>Secure Personal Profile</li>
-        <li>Vehicle Health Check (VHC)</li>
-        <li>Vehicle Electronic Parts Catalogue (EPC)</li>
-        <li>Global Distribution System (GDS) / Airline Reservations System</li>
-        <li>Telephony.</li>
+            <li>Cloud Native Java (Kotlin) Spring Boot Application</li>
+            <li>Digital Notifications (Email, SMS, Mobile Push Notification)</li>
+            <li>Secure Personal Profile</li>
+            <li>Vehicle Health Check (VHC)</li>
+            <li>Vehicle Electronic Parts Catalogue (EPC)</li>
+            <li>Global Distribution System (GDS) / Airline Reservations System</li>
+            <li>Telephony.</li>
         </ul>
         </li>
-        </ul>
-        <h2 id="experience">Experience</h2>
-        <h3 id="-azupay-https-azupay-com-au-"><a href="https://azupay.com.au">Azupay</a></h3>
-        <p>Senior Engineer (October 2021 - Present)</p>
-        <ul>
+    </ul>
+    <h2 id="experience">Experience</h2>
+    <h3 id="-azupay-https-azupay-com-au-"><a href="https://azupay.com.au">Azupay</a></h3>
+    <p>Senior Engineer (October 2021 - Present)</p>
+    <ul>
         <li>Building Azupay&#39;s PayID and PayTo payment solutions. <ul>
-        <li>PayTo is a new, digital way for merchants and businesses to initiate real-time payments.</li>
+            <li>PayTo is a new, digital way for merchants and businesses to initiate real-time payments.</li>
         </ul>
         </li>
-        </ul>
-        <h3 id="-service-nsw-https-service-nsw-gov-au-"><a href="https://service.nsw.gov.au">Service NSW</a></h3>
-        <p>Principal Engineer (August 2020 - October 2021)</p>
-        <ul>
+    </ul>
+    <h3 id="-service-nsw-https-service-nsw-gov-au-"><a href="https://service.nsw.gov.au">Service NSW</a></h3>
+    <p>Principal Engineer (August 2020 - October 2021)</p>
+    <ul>
         <li><p>Working on Service New South Wales&#39;s Digital Notifications portfolios.</p>
         </li>
         <li><p>Product development using Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
         </li>
-        </ul>
-        <p>Senior Engineer (December 2018 - August 2020)</p>
-        <ul>
+    </ul>
+    <p>Senior Engineer (December 2018 - August 2020)</p>
+    <ul>
         <li><p>Working on Service New South Wales&#39;s Personal Profile and Digital Notifications portfolios.</p>
         </li>
         <li><p>Experience in Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
         </li>
-        </ul>
-        <h3 id="-infomedia-ltd-https-infomedia-com-au-"><a href="https://infomedia.com.au">Infomedia Ltd</a></h3>
-        <p>Software Developer (January 2008 - November 2018)</p>
-        <ul>
+    </ul>
+    <h3 id="-infomedia-ltd-https-infomedia-com-au-"><a href="https://infomedia.com.au">Infomedia Ltd</a></h3>
+    <p>Software Developer (January 2008 - November 2018)</p>
+    <ul>
         <li>Software developer of SaaS solutions for the automotive industry.</li>
-        </ul>
-        <h3 id="abacus-international-now-part-of-sabre-corporation-https-sabre-com-">Abacus International (now part of <a href="https://sabre.com">Sabre Corporation</a>)</h3>
-        <p>Software Developer (August 2002 - June 2005)</p>
-        <ul>
+    </ul>
+    <h3 id="abacus-international-now-part-of-sabre-corporation-https-sabre-com-">Abacus International (now part of <a href="https://sabre.com">Sabre Corporation</a>)</h3>
+    <p>Software Developer (August 2002 - June 2005)</p>
+    <ul>
         <li>GDS (Global Distribution Systems) software developer. Developing solutions for travel-related services and airline ticketing.</li>
-        </ul>
-        <h3 id="-innovax-systems-pte-ltd-https-innovax-systems-"><a href="https://innovax.systems">Innovax Systems Pte Ltd</a></h3>
-        <p>Software Developer (March 1999 - May 2002)</p>
-        <ul>
+    </ul>
+    <h3 id="-innovax-systems-pte-ltd-https-innovax-systems-"><a href="https://innovax.systems">Innovax Systems Pte Ltd</a></h3>
+    <p>Software Developer (March 1999 - May 2002)</p>
+    <ul>
         <li>Contact Centre Solutions developer. Developing IVR (Interactive Voice Response) solutions, PABX (Private Automatic Branch Exchange), VoIP, and CRM (Customer Relationship Management).</li>
-        </ul>
-        <h2 id="education">Education</h2>
-        <h3 id="university-of-new-south-wales">University of New South Wales</h3>
-        <p>Master&#39;s degree, Computing and Information Technology (2005 - 2007)</p>
-    </div>    
+    </ul>
+    <h2 id="education">Education</h2>
+    <h3 id="university-of-new-south-wales">University of New South Wales</h3>
+    <p>Master&#39;s degree, Computing and Information Technology (2005 - 2007)</p>
+</main>
 </body>
 </html>
