--- a/index.html
+++ b/index.html
@@ -25,20 +25,21 @@
         </li>
         <li><p>The solutions include both API and web application.</p>
         </li>
-        <li><p>In my day to day work, I practised Pivotal’s ways of working which includes Pair Programming and Test Driven Development.</p>
+        <li><p>In my day-to-day work, I practised Pivotal’s ways of working which includes Pair Programming and Test Driven Development.</p>
         </li>
         <li><p>I received formal training at Pivotal Labs in Sydney in 2018.</p>
         </li>
         <li><p>The technology stacks that I am using daily includes:</p>
             <ul>
-                <li>AWS API Gateway, Lambda, DynamoDB, SQS, and CloudWatch (aka. serverless)</li>
+                <li>AWS API Gateway, Lambda, DynamoDB, SQS, and CloudWatch (aka. serverless stack)</li>
                 <li>AWS CloudFormation and CDK</li>
-                <li>AWS AppSync</li>
                 <li>VueJS</li>
-                <li>GitLab</li>
-                <li>JavaScript and NodeJS</li>
+                <li>GitLab CI/CD</li>
+                <li>JavaScript and Node.js</li>
+                <li>Playwright</li>
             </ul>
         </li>
+        <li>For more details, see: <a href="works.html">works</a></li>
     </ul>
     <h3 id="past">Past</h3>
     <ul>
@@ -57,10 +58,7 @@
     <h3 id="-azupay-https-azupay-com-au-"><a href="https://azupay.com.au">Azupay</a></h3>
     <p>Senior Engineer (October 2021 - Present)</p>
     <ul>
-        <li>Building Azupay&#39;s PayID and PayTo payment solutions. <ul>
-            <li>PayTo is a new, digital way for merchants and businesses to initiate real-time payments.</li>
-        </ul>
-        </li>
+        <li>Building PayID and PayTo payment solutions.</li>
     </ul>
     <h3 id="-service-nsw-https-service-nsw-gov-au-"><a href="https://service.nsw.gov.au">Service NSW</a></h3>
     <p>Principal Engineer (August 2020 - October 2021)</p>
@@ -80,21 +78,36 @@
     <h3 id="-infomedia-ltd-https-infomedia-com-au-"><a href="https://infomedia.com.au">Infomedia Ltd</a></h3>
     <p>Software Developer (January 2008 - November 2018)</p>
     <ul>
-        <li>Software developer of SaaS solutions for the automotive industry.</li>
+        <li>Building SaaS solutions for the automotive industry.</li>
     </ul>
     <h3 id="abacus-international-now-part-of-sabre-corporation-https-sabre-com-">Abacus International (now part of <a href="https://sabre.com">Sabre Corporation</a>)</h3>
     <p>Software Developer (August 2002 - June 2005)</p>
     <ul>
-        <li>GDS (Global Distribution Systems) software developer. Developing solutions for travel-related services and airline ticketing.</li>
+        <li><p>GDS (Global Distribution Systems) software developer.</p>
+        </li>
+        <li><p>Building solutions for travel-related services and airline ticketing.</p>
+        </li>
     </ul>
     <h3 id="-innovax-systems-pte-ltd-https-innovax-systems-"><a href="https://innovax.systems">Innovax Systems Pte Ltd</a></h3>
     <p>Software Developer (March 1999 - May 2002)</p>
     <ul>
-        <li>Contact Centre Solutions developer. Developing IVR (Interactive Voice Response) solutions, PABX (Private Automatic Branch Exchange), VoIP, and CRM (Customer Relationship Management).</li>
+        <li><p>Contact Centre Solutions developer. </p>
+        </li>
+        <li><p>Developing IVR (Interactive Voice Response) solutions, PABX (Private Automatic Branch Exchange), VoIP, and CRM (Customer Relationship Management).</p>
+        </li>
     </ul>
     <h2 id="education">Education</h2>
     <h3 id="university-of-new-south-wales">University of New South Wales</h3>
     <p>Master&#39;s degree, Computing and Information Technology (2005 - 2007)</p>
+    <h2 id="certifications">Certifications</h2>
+    <h3 id="aws-certified-developer-associate-2022-">AWS Certified Developer – Associate (2022)</h3>
+    <ul>
+        <li><a href="https://www.credly.com/badges/f8223cd3-0012-44ab-83c6-d7283c5685e0">Badge</a></li>
+    </ul>
+    <h3 id="oracle-certified-associate-java-se-8-programmer-2017-">Oracle Certified Associate, Java SE 8 Programmer (2017)</h3>
+    <ul>
+        <li><a href="https://www.credly.com/badges/f6a859ee-1974-40fa-b03f-0065332eaa77">Badge</a></li>
+    </ul>
 </main>
 </body>
 </html>
