--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <h2 id="about-me">About me</h2>
     <h3 id="current">Current</h3>
     <ul>
-        <li><p>In my current role, I am building payment solutions on New Payment Platform, which is Australia&#39;s national fast payments infrastructure.</p>
+        <li><p>In my current role, I am building payment solutions on New Payment Platform, which is Australia&#39;s
+            national fast payments infrastructure.</p>
         </li>
         <li><p>The solutions include both API and web application.</p>
         </li>
-        <li><p>In my day-to-day work, I practised Pivotal’s ways of working which includes Pair Programming and Test Driven Development.</p>
+        <li><p>In my day-to-day work, I practised Pivotal’s ways of working which includes Pair Programming and Test
+            Driven Development.</p>
         </li>
         <li><p>I received formal training at Pivotal Labs in Sydney in 2018.</p>
         </li>
@@ -39,48 +41,51 @@
                 <li>Playwright</li>
             </ul>
         </li>
-        <li>For more details, see: <a href="works.html">works</a></li>
     </ul>
     <h3 id="past">Past</h3>
     <ul>
-        <li>I worked with the following technologies in the past: <ul>
-            <li>Cloud Native Java (Kotlin) Spring Boot Application</li>
-            <li>Digital Notifications (Email, SMS, Mobile Push Notification)</li>
-            <li>Secure Personal Profile</li>
-            <li>Vehicle Health Check (VHC)</li>
-            <li>Vehicle Electronic Parts Catalogue (EPC)</li>
-            <li>Global Distribution System (GDS) / Airline Reservations System</li>
-            <li>Telephony.</li>
-        </ul>
+        <li>I worked with the following technologies in the past:
+            <ul>
+                <li>Cloud Native Java (Kotlin) Spring Boot Application</li>
+                <li>Digital Notifications (Email, SMS, Mobile Push Notification)</li>
+                <li>Secure Personal Profile</li>
+                <li>Vehicle Health Check (VHC)</li>
+                <li>Vehicle Electronic Parts Catalogue (EPC)</li>
+                <li>Global Distribution System (GDS) / Airline Reservations System</li>
+                <li>Telephony.</li>
+            </ul>
         </li>
     </ul>
     <h2 id="experience">Experience</h2>
-    <h3 id="-azupay-https-azupay-com-au-"><a href="https://azupay.com.au">Azupay</a></h3>
+    <h3 id="azupay"><a href="https://azupay.com.au">Azupay</a></h3>
     <p>Senior Engineer (October 2021 - Present)</p>
     <ul>
         <li>Building PayID and PayTo payment solutions.</li>
     </ul>
-    <h3 id="-service-nsw-https-service-nsw-gov-au-"><a href="https://service.nsw.gov.au">Service NSW</a></h3>
+    <h3 id="service-nsw"><a href="https://service.nsw.gov.au">Service NSW</a></h3>
     <p>Principal Engineer (August 2020 - October 2021)</p>
     <ul>
         <li><p>Working on Service New South Wales&#39;s Digital Notifications portfolios.</p>
         </li>
-        <li><p>Product development using Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
+        <li><p>Product development using Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal
+            Cloud Foundry), Test Driven Development, and Pair Programming.</p>
         </li>
     </ul>
     <p>Senior Engineer (December 2018 - August 2020)</p>
     <ul>
         <li><p>Working on Service New South Wales&#39;s Personal Profile and Digital Notifications portfolios.</p>
         </li>
-        <li><p>Experience in Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal Cloud Foundry), Test Driven Development, and Pair Programming.</p>
+        <li><p>Experience in Kotlin, Spring Boot, Spring Security, VMWare Tanzu Application Service (Pivotal Cloud
+            Foundry), Test Driven Development, and Pair Programming.</p>
         </li>
     </ul>
-    <h3 id="-infomedia-ltd-https-infomedia-com-au-"><a href="https://infomedia.com.au">Infomedia Ltd</a></h3>
+    <h3 id="infomedia-ltd"><a href="https://infomedia.com.au">Infomedia Ltd</a></h3>
     <p>Software Developer (January 2008 - November 2018)</p>
     <ul>
         <li>Building SaaS solutions for the automotive industry.</li>
     </ul>
-    <h3 id="abacus-international-now-part-of-sabre-corporation-https-sabre-com-">Abacus International (now part of <a href="https://sabre.com">Sabre Corporation</a>)</h3>
+    <h3 id="abacus-international-now-part-of-sabre-corporation">Abacus International (now part of <a
+            href="https://sabre.com">Sabre Corporation</a>)</h3>
     <p>Software Developer (August 2002 - June 2005)</p>
     <ul>
         <li><p>GDS (Global Distribution Systems) software developer.</p>
@@ -88,23 +93,25 @@
         <li><p>Building solutions for travel-related services and airline ticketing.</p>
         </li>
     </ul>
-    <h3 id="-innovax-systems-pte-ltd-https-innovax-systems-"><a href="https://innovax.systems">Innovax Systems Pte Ltd</a></h3>
+    <h3 id="innovax-systems-pte-ltd"><a href="https://innovax.systems">Innovax Systems Pte Ltd</a></h3>
     <p>Software Developer (March 1999 - May 2002)</p>
     <ul>
         <li><p>Contact Centre Solutions developer. </p>
         </li>
-        <li><p>Developing IVR (Interactive Voice Response) solutions, PABX (Private Automatic Branch Exchange), VoIP, and CRM (Customer Relationship Management).</p>
+        <li><p>Developing IVR (Interactive Voice Response) solutions, PABX (Private Automatic Branch Exchange), VoIP,
+            and CRM (Customer Relationship Management).</p>
         </li>
     </ul>
     <h2 id="education">Education</h2>
     <h3 id="university-of-new-south-wales">University of New South Wales</h3>
     <p>Master&#39;s degree, Computing and Information Technology (2005 - 2007)</p>
     <h2 id="certifications">Certifications</h2>
-    <h3 id="aws-certified-developer-associate-2022-">AWS Certified Developer – Associate (2022)</h3>
+    <h3 id="aws-certified-developer--associate-2022">AWS Certified Developer – Associate (2022)</h3>
     <ul>
         <li><a href="https://www.credly.com/badges/f8223cd3-0012-44ab-83c6-d7283c5685e0">Badge</a></li>
     </ul>
-    <h3 id="oracle-certified-associate-java-se-8-programmer-2017-">Oracle Certified Associate, Java SE 8 Programmer (2017)</h3>
+    <h3 id="oracle-certified-associate-java-se-8-programmer-2017">Oracle Certified Associate, Java SE 8 Programmer
+        (2017)</h3>
     <ul>
         <li><a href="https://www.credly.com/badges/f6a859ee-1974-40fa-b03f-0065332eaa77">Badge</a></li>
     </ul>
